Fix problem with intersecting rings